reverting files and removing java versions from dockerfile